# Receita_Federal_do_Brasil_-_Dados_Publicos_CNPJ

./: .gitignore  ETL_coletar_dados_e_gravar_BD.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
code/: .env_template  ETL_coletar_dados_e_gravar_BD.ipynb  ETL_coletar_dados_e_gravar_BD.py  banco_de_dados.sql
