[tool.poetry]
name = "coleta cnpj"
version = "0.1.0"
description = "coletar cnpj da base brasil para analise de clientes e prospecção"
authors = ["Renan Valani Trelar <renan@trelarmadeiras.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = ">=4.9.3"
bs4 = ">=0.0.1"
greenlet = ">=1.1.0"
importlib-metadata = ">=4.5.0"
lxml = ">=4.6.3"
numpy = ">=1.20.3"
pandas = ">=1.2.4"
python-dateutil = ">=2.8.1"
python-dotenv = "1.0.0"
pytz = ">=2021.1"
requests = "2.30.0"
six = ">=1.16.0"
soupsieve = ">=2.2.1"
sqlalchemy = ">=1.4.18"
typing-extensions = ">=3.10.0.0"
tzdata = "2023.3"
urllib3 = "2.0.2"
wget = ">=3.2"
zipp = ">=3.4.1"
mysql-connector-python = "^8.3.0"
pyarrow = "^15.0.0"
duckdb = "^0.10.0"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
ipykernel = "^6.29.2"
pyftpdlib = "^1.5.9"
gzip-utils = "^2020.7.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
